--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^8.1",
         "ext-json": "*",
         "ext-mbstring": "*",
         "psr/log": "^1.1",
@@ -34,6 +34,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\Chargemap\\OCPI\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
         }
     }
 }
