--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
         "php": "^8.1",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "psr/log": "^1.1",
+        "psr/log": "^1.1|^2.0|^3.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "psr/http-message": "^1.0",
+        "psr/http-message": "^1.0|^2.0",
         "php-http/discovery": "^1.7",
         "myclabs/php-enum": "^1.7",
         "justinrainbow/json-schema": "^5.2"
